--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "beautiful-nightmares",
+  "homepage": "https://beautiful-nightmares.github.io/beautiful-nightmares",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "daisyui": "^5.1.12",
+    "gh-pages": "^6.3.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
