addition of gh-pages 4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beautiful-nightmares",
-  "homepage": "https://beautiful-nightmares.github.io/",
+  "homepage": "https://beautiful-nightmares.github.io/beautiful-nightmares",
   "private": true,
   "version": "0.0.0",
   "type": "module",
