--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beautiful-nightmares",
-  "homepage": "https://beautiful-nightmares.github.io/beautiful-nightmares",
+  "homepage": "http://www.beautifulnightmares.co",
   "private": true,
   "version": "0.0.0",
   "type": "module",
